# Attivita_Tracker

./: AttivitaFisica.cpp  AttivitaFisica.h  CMakeLists.txt  Partecipante.cpp  Partecipante.h  TrackerAttivita.cpp  TrackerAttivita.h  main.cpp
test/: AttivitaFisica_Test.cpp  CMakeLists.txt  Partecipante_Test.cpp  TrackerAttivita_Test.cpp  run_ALLTests.cpp
